Halo material on Layer 2 produces flares on layer 1 #36194

Closed
opened 2013-07-18 09:56:09 +02:00 by Thomas Beck · 4 comments
Member

%%%Hi guys,

- Operating System, Graphics card ---

Win64, intel

- Blender version with error, and version that worked ---

buildbot from today: r58357

- Short description of error ---

I've got a halo vertex with a flare on layer two. When I render it with F12, the compositor and viewer shows the halo on the right layer (two) but the flare on layer one.
When I hit each of the "render active scene" buttons in the RenderLayer node, everything works as expected: Layer one contains only the text, layer two contains the halo and flare.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the supplied blend and render first via F12, then look at the background image in the compo or the miniature views in the nodes. To fix it, render each Layer with the "render active scene" button.

Greetings, Thomas

%%%

%%%Hi guys, - Operating System, Graphics card --- Win64, intel - Blender version with error, and version that worked --- buildbot from today: r58357 - Short description of error --- I've got a halo vertex with a flare on layer two. When I render it with F12, the compositor and viewer shows the halo on the right layer (two) but the flare on layer one. When I hit each of the "render active scene" buttons in the RenderLayer node, everything works as expected: Layer one contains only the text, layer two contains the halo and flare. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the supplied blend and render first via F12, then look at the background image in the compo or the miniature views in the nodes. To fix it, render each Layer with the "render active scene" button. Greetings, Thomas %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%This behavior is caused by the BI renderer, and it's shoddy but anticipated in the code. The suggested solution would be to disable "Halo" on the first render layer, which will put the halo flare on the second as desired. See attached screenshot and fixed blend file. Will try to find a proper fix anyway.

Dev notes:
rendercore.c, add_halo_flare, line 1962: "for now, we get the first renderlayer in list with halos set"
Guess this should check har->lay instead, any reason it doesn't do that?%%%

%%%This behavior is caused by the BI renderer, and it's shoddy but anticipated in the code. The suggested solution would be to disable "Halo" on the first render layer, which will put the halo flare on the second as desired. See attached screenshot and fixed blend file. Will try to find a proper fix anyway. Dev notes: rendercore.c, add_halo_flare, line 1962: "for now, we get the first renderlayer in list with halos set" Guess this should check har->lay instead, any reason it doesn't do that?%%%
Member

%%%Your reported issue has been fixed in SVN. Thanks for taking the
time to report!.%%%

%%%Your reported issue has been fixed in SVN. Thanks for taking the time to report!.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36194
No description provided.